tooling/nargo_cli/tests/snapshots/execution_success/regression_8233/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "c",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/6WPQQ6AMAgEW/VBUEDg5ldsxP8/QY09NCZ6cRIycNmwOd3kc4ZuH5tT5/S4l2b4B+Yui2BmDi2BhCsUrybAUmdDQzHZihGFsalXV3BkCtzFSWugbitfWdPL3+mj08UBpCl3fAwBAAA=",
  "debug_symbols": "dZDRCoMwDEX/pc8+2Lkh+CtjSKxRCqEtsRWG+O+LopsOfEpvTs+FdlItNqmvrev8oKrnpBq2RLavyRuI1jvZTnOm9lhHRpSVOnCxAjC6qCqXiDI1AqX10hDArTMCC80zha6VKYWdJVxOc/az82tV63KTdXH/6o+zr6/9Ir9tflGe/ZckMJb/XzwCW2gIt9glZw40vsNO9h8L7A22iXFpWpl0fwA=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
