tooling/nargo_cli/tests/snapshots/execution_success/regression_8233/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "c",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VU2w7CIAxlihdc1GQzvuhHgNvcHn3QDyHOfcc+3aFtqIi+DE5CWqA9tGeDhL2RwDDgZM0Frl3AynFQAblk4qnzbxO+hCNYAXZC9qcBGxeeWkLxN7I8C/bdc8D6CwGcMfVBzgj8cgE8197yu70wYjHOzTFYs88LRGOWw9gw629JjsGNcGF+TG2Hf6OKrK3K2W89U9BhD/OZ03sOdj6MjPg7jy+c3FB91KV6NKeqTZl9B3gf9ozXOY19tKa91QO1ouBkn8YfYL4iGqDlI+rsaq26Qne60m1b3nXm8Bvg9zU6PQHhGoV2SQYAAA==",
  "debug_symbols": "XY7BCoRACIbfxfMc2i4LvUpE2GQxIM5gM8ESvfs6sUHsRf391N8DZprKOgZZ4gZdf8CkgTmsI0ePOUSx7nE6uOWYlcha8OC2lVBJMnRSmB3syOUa2hLKlTOq0cYByWzZDi6BqVbnYAJ90H/HHTXgxPSTSxH/oPmTbnJ/nDR6motSvVQZNDW8LPZt69r3cFa3Lw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
